--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,7 @@ button {
 }
 
 .main__box--question {
+  opacity: 0;
   padding: 60px 120px;
   height: auto;
   min-height: 540px;
@@ -204,6 +205,7 @@ button {
 
 .main__form-question {
   position: relative;
+  opacity: 0;
 }
 
 .main__form-question::after {
@@ -323,7 +325,19 @@ button {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
+.main__form-question--error .answer__checkbox::before,
+.main__form-question--error .answer__radio::before {
+  animation: blink .3s ease-in-out 3;
+}
+
+@keyframes blink {
+  to {
+    box-shadow: 0 2px 10px rgba(255, 0, 0, 0.55);
+  }
+}
+
 .main__box--result {
+  opacity: 0;
   padding: 60px;
   display: flex;
   flex-direction: column;
@@ -351,15 +365,15 @@ button {
   margin-bottom: 20px;
 }
 
-.result__ratio--bad {
+.result__ratio--1 {
   background-color: #dc1c1c;
 }
 
-.result__ratio--average {
+.result__ratio--2 {
   background-color: #efcf24;
 }
 
-.result__ratio--excellent {
+.result__ratio--3 {
   background-color: #49f050;
 }
 
